--- a/frontEnd/angular.json
+++ b/frontEnd/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/theme/mytheme.scss",
               "src/styles.css"
             ],
             "scripts": []
